--- a/ResumeProject/ResumeProject.csproj
+++ b/ResumeProject/ResumeProject.csproj
@@ -351,6 +351,7 @@
     <Content Include="Views\Skill\AddSkill.cshtml" />
     <Content Include="Views\Skill\UpdateSkill.cshtml" />
     <Content Include="Views\Technology\Index.cshtml" />
+    <Content Include="Views\Technology\AddTechnology.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
