--- a/ResumeProject/ResumeProject.csproj
+++ b/ResumeProject/ResumeProject.csproj
@@ -170,6 +170,9 @@
     <Compile Include="Models\TblProject.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TblService.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TblSkill.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -443,7 +446,6 @@
     <Content Include="Views\Category\GetMessageBySubject.cshtml" />
     <Content Include="Views\Statistic\Index.cshtml" />
     <Content Include="Views\Default\Index.cshtml" />
-    <Content Include="Views\Default\PartialHead.cshtml" />
     <Content Include="Views\Default\PartialHeader.cshtml" />
     <Content Include="Views\Default\PartialBanner.cshtml" />
     <Content Include="Views\Default\PartialScripts.cshtml" />
@@ -455,6 +457,7 @@
     <Content Include="Views\Default\PartialStats.cshtml" />
     <Content Include="Views\Default\PartialFeaturedSkills.cshtml" />
     <Content Include="Views\Default\PartialChoose.cshtml" />
+    <Content Include="Views\Default\PartialNavbar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
