--- a/ResumeProject/ResumeProject.csproj
+++ b/ResumeProject/ResumeProject.csproj
@@ -461,6 +461,10 @@
     <Content Include="Views\Default\PartialFeaturedSkills.cshtml" />
     <Content Include="Views\Default\PartialExperience.cshtml" />
     <Content Include="Views\Default\PartialNavbar.cshtml" />
+    <Content Include="Views\Contact\SendMessage.cshtml" />
+    <Content Include="Views\Shared\_DefaultLayout.cshtml" />
+    <Content Include="Views\Contact\PartialMap.cshtml" />
+    <Content Include="Views\Contact\PartialFeature.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
